--- a/public/style.css
+++ b/public/style.css
@@ -37,9 +37,23 @@ body::-webkit-scrollbar-thumb:hover {
   background-color: rgba(95, 95, 95, .7);
 }
 
-h2 {
-  padding-bottom: 20px;
+header {
+  display: flex;
 }
+
+h1.title {
+  padding-bottom: 20px;
+  font-size: 26px;
+  font-weight: normal;
+}
+
+header #date {
+  height: 18px;
+  padding: 17px 0 0 10px;
+  font-size: 13px;
+  color: #5fa207;
+}
+
 a {
   text-decoration: none;
   color: #424242;
@@ -48,18 +62,22 @@ a {
 ul, li {
   list-style-type: none;
 }
-section {
+
+.groups {
   margin-bottom: 20px !important;
 }
-section dl {
+
+.groups dl {
   padding: 12px 15px;
   border-radius: 6px;
   box-shadow: 0 3px 8px 0 rgb(0, 0, 0, 0.05);
   transition: box-shadow 0.3s ease-in-out 0.1s;
 }
-section dl:hover {
+
+.groups dl:hover {
   box-shadow: 0 5px 8px 0 rgb(0, 0, 0, 0.1);
 }
-section dl dd {
+
+.groups dl dd {
   cursor: pointer !important;
 }
